--- a/backend/src/main/resources/templates/index.html
+++ b/backend/src/main/resources/templates/index.html
@@ -3,10 +3,11 @@
 <head>
     <title>Jobs Manager</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <script src="/webjars/jquery/jquery.min.js"></script>
-    <script src="/webjars/sockjs-client/sockjs.min.js"></script>
-    <script src="/webjars/stomp-websocket/stomp.min.js"></script>
+    <link href="/miscellaneous/bootstrap-4.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <script src="/miscellaneous/jquery-3.3.1.min.js"></script>
+    <script src="/miscellaneous/bootstrap-4.0.0/js/bootstrap.bundle.min.js"></script>
+    <script src="/miscellaneous/sockjs.min.js"></script>
+    <script src="/miscellaneous/stomp.min.js"></script>
 </head>
 <body>
 <noscript><h2 style="color: #ff0000">Seems your browser doesn't support Javascript! Websocket relies on Javascript being
